# ThorStormbreaker

./: .env.example  .gitignore  CMakeLists.txt  GestionarCEF.ps1  GestionarWebView.ps1  README.md  ThorStormbreaker.cpp  ThorStormbreaker.h  WEBVIEW_IMPLEMENTATION_GUIDE.md  WEBVIEW_VALIDATION_SUMMARY.md
app/: App.cpp  App.h
cmake/: DownloadCEF.cmake  LoadEnvCMake.cmake
config/: Cipher.h  ConfigEnvironment.h  ConfigGenerator.h  ConfigManager.h  SecureString.h
docs/: CEF_INTEGRACION.md  CEF_RESUMEN.md
examples/: FingerPrintUsage.cpp  config_usage_example.cpp
repository/: Respository.h
resources/: app.rc
services/: AccessBackgroundService.h  Environment.h  FingerEnrollService.h  FingerprintDeviceManager.h  IBrowserService.h  IFingerprintService.h
services/implement/: AccessBackgroundService.cpp  FingerEnrollServiceImpl.cpp  FingerEnrollServiceImpl.h  FingerprintDeviceManager.cpp  FingerprintServiceImpl.cpp  FingerprintServiceImpl.h
ui/: WebViewDispatcher.h  WebViewUI.cpp  WebViewUI.h  WebViewUi.cpp  banner.html
ui/WebBindServices/: FingerEnrollBind.cpp  FingerEnrollBind.h  IFingerEnrollBind.h
